Ver1.2.0 complete output format

--- a/lab01_lwc/makefile
+++ b/lab01_lwc/makefile
@@ -1,4 +1,4 @@
 all:
 	gcc -std=c99 lwc.c -o lwc
-#	./lwc -c test2.txt 
-#	wc -c test2.txt 
+#	./lwc -l test2.txt test1.txt test3.txt testsdf test4.txt test5.txt 
+#	wc -l test2.txt  test1.txt test3.txt testsdf test4.txt test5.txt
